--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "dotenv": "^16.4.5",
     "npm": "^10.8.1",
     "quasar": "^2.6.0",
     "vue": "^3.4.18",
