--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "@quasar/app-vite": "^2.0.0-beta.5",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.14"
