--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,16 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "resolveJsonModule": true,
+    "paths": {
+      "@config/*":["./src/config/*"],
+      "@pipes/*":["./src/common/pipes/*"],
+      "@interceptors/*":["./src/common/interceptors/*"],
+      "@filters/*":["./src/common/filters/*"],
+      "@guards/*":["./src/auth/guards/*"],
+      "@decorators/*":["./src/auth/decorators/*"],
+      "@swagger/*":["./src/swagger/*"]
+    }
   }
 }
