--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "npm": "^10.8.1",
     "quasar": "^2.6.0",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
