New: New alias (helpers). code refactor (add alias imports). New helper date. Add reset password route. Update change password route.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@filters/*":["./src/common/filters/*"],
       "@guards/*":["./src/auth/guards/*"],
       "@decorators/*":["./src/auth/decorators/*"],
-      "@swagger/*":["./src/swagger/*"]
+      "@swagger/*":["./src/swagger/*"],
+      "@helpers/*":["./src/helpers/*"]
     }
   }
 }
