--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "npm": "^10.8.1",
     "quasar": "^2.6.0",
     "socket.io-client": "^4.7.5",
