--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "nestjs-telegraf": "^2.8.1",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "stripe": "^16.2.0",
+    "telegraf": "^4.16.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
