--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
      runs-on: ubuntu-latest
      strategy:
        matrix: 
-         node-version: [ 18.10.0 ]
+         node-version: [ 18.x ]
      steps: 
         - uses: actions/checkout@v3
         - name: Starting Node.js version ${{ matrix.node-version }}
