--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,13 @@ jobs:
          node-version: [ 18.x ]
      steps: 
         - uses: actions/checkout@v3
-        - name: Starting Node.js version ${{ matrix.node-version }}
+        - name: Setting up Node.js ${{ matrix.node-version }}
            uses: actions/setup-node@v3
            with: 
               node-version: ${{ matrix.node-version }}
-           run: echo Node.js installed 
         - name: Installing dependencies
            run: npm install
-        - name: Staring testing 
+        - name: Running tests 
            run: npm run test 
-        - name: Starting e2e testing
-           run: npm run test:e2e
+        - name: Running end-to-end tests
+           run: npm run test:e2e 
