--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
          node-version: [ 18.x ]
      steps: 
         - uses: actions/checkout@v3
-        - name: Setting up Node.js ${{ matrix.node-version }}
+        - name: Setting up Node.js
            uses: actions/setup-node@v3
            with: 
               node-version: ${{ matrix.node-version }}
