--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,13 @@ on:
 jobs: 
    init: 
      runs-on: ubuntu-latest
+     services: 
+       postgres: 
+         image: postgres
+         env: 
+           POSTGRES_PASSWORD=postgres
+         ports:
+           5432:5432
      strategy:
        matrix: 
          node-version: [ 18.x ]
