--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,10 +8,10 @@ jobs:
      services: 
        postgres: 
          image: postgres
-         env: 
-           POSTGRES_PASSWORD=postgres
+         env:
+          POSTGRES_PASSWORD: postgres
          ports:
-           5432:5432
+          5432:5432
      strategy:
        matrix: 
          node-version: [ 18.x ]
