--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,13 @@ jobs:
           with: 
             node-version: ${{ matrix.node-version }}
         - name: Setup environment variables
-          run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          run: |
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+            echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .env
+            echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .env
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
         - name: Install dependencies
           run: npm install
         - name: Run tests
