--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,7 @@ on:
 jobs: 
    init: 
      runs-on: ubuntu-latest
+     container: node:10.18-jessie
      services: 
        postgres: 
          image: postgres
