--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         - name: Generate fake db
           run: node ./dist/faker.js
         - name: Run Detector tests
-          run: jest --detectOpenHandles
+          run: npx jest --detectOpenHandles
         - name: Run tests
           run: npm run test 
         - name: Run end-to-end tests
