--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,3 +51,5 @@ jobs:
           run: npm run build
         - name: Generate fake db
           run: node ./dist/faker.js
+        - name: E2E
+          run: npm run test:e2e
